--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^11.2.12",
     "i": "^0.3.7",
     "npm": "^10.8.1",
     "react": "^18.2.0",
