--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "npm": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1"
   },
@@ -37,6 +38,7 @@
     "@types/lodash": "^4.17.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-modal": "^3.16.3",
     "@types/redux-mock-store": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
