--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-to-print": "^2.15.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
